tests/typecheck/should_fail/T22141b.stderr
T22141b.hs:10:1: error: [GHC-68567]
    • Illegal kind: ‘GHC.Internal.Bignum.Natural.Natural’
    • In the expansion of type synonym ‘Nat’
      In the expansion of type synonym ‘MyNat’
      In the data type declaration for ‘Vector’
    Suggested fix:
      Perhaps you intended to use the ‘DataKinds’ extension (implied by ‘UnliftedDatatypes’)

